--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: whz'blog
 subtitle: 
 description:
 author: Whz
-language:
+language: zh-Hans
 timezone:
 
 # URL
@@ -63,7 +63,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
