--- a/_config.yml
+++ b/_config.yml
@@ -69,5 +69,7 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/whpointz/whpointz.github.io.git
-  branch: master
+  repo:
+      github: https://github.com/whpointz/whpointz.github.io.git,master
+      coding: https://git.coding.net/whpointz/whpointz.git,master
+  
